Addressing an issue where tests pass locally but fail in the remote CI runner. Using advanced databse features in testing requires the Firebase config files, which were previously omited from version control.

--- a/cms-app/.gitignore
+++ b/cms-app/.gitignore
@@ -24,10 +24,11 @@ dist-ssr
 *.sw?
 
 .env
-.firebaserc
-firebase.json
-firestore*
-.firebase
+
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
 
 /coverage
 
